fix: sync-daily-stats APIのタイムアウト対策
- Vercelのタイムアウトを60秒に延長
- GitHub APIのページ取得を3→2ページに最適化
- ユーザー間の待機時間を500ms→200msに短縮
- 一度に最大20ユーザーまで処理してタイムアウトを防止
- 処理時間の大幅短縮でパフォーマンス向上

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,9 @@
   "cleanUrls": true,
   "trailingSlash": false,
   "functions": {
+    "src/app/api/github/sync-daily-stats/route": {
+      "maxDuration": 60
+    },
     "src/app/**": {
       "maxDuration": 10
     }
