--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "framer-motion": "^12.23.24",
     "next": "15.5.4",
+    "openai": "^6.9.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.1"
