--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "ai": "^5.0.104",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "openai": "^6.9.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "recharts": "^3.2.1"
   },
   "devDependencies": {
